--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "prod": "tsc && node dist/app.ts",
     "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push"
+    "prisma:push": "prisma db push",
+    "prisma:generatePush": "prisma generate && prisma db push"
   },
   "author": "Aman Dewett",
   "license": "MIT",
