--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "socket.io": "^4.7.5",
     "tslib": "^2.6.2"
   }
 }
